--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@nrwl/web": "^15.9.2",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@rspack/core": "~0.1.0",
+    "@rspack/dev-server": "~0.1.0",
+    "@rspack/plugin-minify": "~0.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
