--- a/package.json
+++ b/package.json
@@ -6,25 +6,34 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nrwl/cypress": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.9.2",
     "@nrwl/rspack": "^15.9.5",
     "@nrwl/web": "^15.9.2",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rspack/core": "~0.1.0",
     "@rspack/dev-server": "~0.1.0",
     "@rspack/plugin-minify": "~0.1.0",
+    "@svgr/webpack": "^6.1.2",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.7.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "^29.4.1",
@@ -36,8 +45,11 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "url-loader": "^4.1.1"
   }
 }
